# contests

./: pyproject.toml
Tetrika/: README.md
Tetrika/task1/: solution.py
Tetrika/task2/: solution.py
Tetrika/task3/: solution.py  solution_different_approach.py
Tetrika/tests/: test_task1.py  test_task2.py  test_task3.py
Workmate/: handlers.py  main.py  metrics.py  report.py
tinkoff-python-intern-2025/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
yandex-python-intern-2025/: task1.py  task2.py  task3.py  task4.py  task5.py  tasks.rar
